# pycognita

./: .classistant.json  .gitignore  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cognita/: __init__.py  buffer.py  caps.py  element.py  image_narrator.py  mailbox_narrator.py  mbox_parser.py  narrator.py  ollama.py  pad.py  pipeline.py  prompt_loader.py  sink.py  source.py  text_narrator.py  triple_extractor.py  type_finder.py
cognita/prompts/: image_narrator.txt  text_narrator.txt  triple_extractor_default.txt  triple_extractor_mail.txt  triple_extractor_system.txt
tests/: test_buffer.py  test_caps.py  test_element.py  test_identity.py  test_image_narrator.py  test_mailbox_narrator.py  test_mbox_parser.py  test_mbox_source.py  test_narrator.py  test_ollama.py  test_pad.py  test_pipeline.py  test_sink.py  test_source.py  test_text_narrator.py  test_triple_extractor.py  test_type_finder.py
tests/data/: generate_mbox.py
tools/: __init__.py  image2spo.py  imagenarrator.py  mbox2spo.py  text2spo.py  typefinder.py
